--- a/Django_db_03/either_game/votes/templates/votes/create.html
+++ b/Django_db_03/either_game/votes/templates/votes/create.html
@@ -2,12 +2,14 @@
 {% load bootstrap5 %}
 
 {% block content %}
-  <h1>New Vote</h1>
+  <h1 class="mt-4 fw-bold">New Vote</h1>
   <hr>
   <form action="{% url 'votes:create' %}" method="POST">
     {% csrf_token %}
 
     {% bootstrap_form form %}
-    <input type="submit" value="Submit">
+    <button type="submit" class="btn btn-dark" >
+      Submit
+    </button>
   </form>
 {% endblock content %}
