--- a/Django_study/instagram_clone_coding/accounts/templates/accounts/login.html
+++ b/Django_study/instagram_clone_coding/accounts/templates/accounts/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h1>Log in</h1>
-  <form action="{% url 'accounts:login' %}" method="POST">
+  <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" class="btn btn-primary" value="Submit">
